--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "prop-types": "^15.7.2",
     "rc-table": "^7.19.0",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
